--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       html{
         background-image: linear-gradient(to right, red 0%, blue 100%);
       }
+      root{
+        display: flex;
+        {
     </style>
   </head>
   <body>
